# test_cocos_proj

./: .gitmodules  29024.atlas  29024.json  CMakeLists.txt
Classes/: AppDelegate.cpp  AppDelegate.h  BaseView.cpp  BaseView.h  BlurMask.cpp  BlurMask.h  Common.cpp  Common.h  GameMap.cpp  GameMap.h  HelloWorldScene.cpp  HelloWorldScene.h  InputManager.cpp  InputManager.h  MainGame.cpp  MainGame.h  MainScene.cpp  Player.cpp  Player.h  ResManager.cpp  ResManager.h  Sprite_Blur.cpp~  Sprite_Blur.h  Test.cpp  Test.h  TestClass.cpp  TestClass.h  WsManager.cpp  WsManager.h  common.cpp  common.h
Resources/: chibang.tps
Resources/HXTga/33002/: 100_1.tga  100_10.tga  100_11.tga  100_2.tga  100_3.tga  100_4.tga  100_5.tga  100_6.tga  100_7.tga  100_8.tga  100_9.tga  101_1.tga  101_10.tga  101_11.tga  101_2.tga  101_3.tga  101_4.tga  101_5.tga  101_6.tga  101_7.tga  101_8.tga  101_9.tga  102_1.tga  102_10.tga  102_11.tga  102_2.tga  102_3.tga  102_4.tga  102_5.tga  102_6.tga  102_7.tga  102_8.tga  102_9.tga  103_1.tga  103_10.tga  103_11.tga  103_2.tga  103_3.tga  103_4.tga  103_5.tga  (+993 more)
Resources/HXTga/527/: 1.tga  10.tga  11.tga  12.tga  2.tga  3.tga  4.tga  5.tga  6.tga  7.tga  8.tga  9.tga  偏移.txt
Resources/HXTga/564/: 1.tga  2.tga  3.tga  4.tga  5.tga  6.tga  7.tga  8.tga  偏移.txt
Resources/HXTga/646/: 1.tga  2.tga  3.tga  4.tga  5.tga  6.tga  7.tga  8.tga
Resources/HXTga/647/: 1.tga  10.tga  11.tga  12.tga  2.tga  3.tga  4.tga  5.tga  6.tga  7.tga  8.tga  9.tga
Resources/image/: test.txt
ResourcesWin/: HXoffset.txt
ResourcesWin/HXoffset/: 646_offset.txt  647_offset.txt
ResourcesWin/csb/: NewNewTaskView.csd
ResourcesWin/image/: eggdog.txt  licheng.txt  maingame.txt  test.txt
ResourcesWin/plist/: chibang.plist  chr1.plist  farmT.plist  laohu.plist  magic.plist  pre_common.plist
cpp-tests/: .cocos-project.json  CMakeLists.txt
cpp-tests/Classes/: BaseTest.cpp
cpp-tests/Classes/DownloaderTest/: DownloaderTest.cpp
cpp-tests/Classes/FileUtilsTest/: FileUtilsTest.cpp
cpp-tests/Classes/RenderTextureTest/: RenderTextureTest.cpp
cpp-tests/Classes/ShaderTest/: ShaderTest.cpp
cpp-tests/Classes/SpineTest/: SpineTest.cpp
cpp-tests/Resources/spine/: 29023.atlas  29023.json
